# a2server_reassembly

asm_crt_test/: asminit.asm  testAsmInit.cpp  testAsmInit.sln  testAsmInit.vcxproj  testAsmInit.vcxproj.filters
src/: .gitignore  CMakeLists.txt  SampleASM32.vcxproj  SampleASM32.vcxproj.filters  a2_ucrt.asm  a2_ucrt.inc  a2server.exe.inc  afxmsg_.h  alm.cpp  alm.h  asm_mfc.cpp  asm_mfc.h  assert_offset.h  bitset.h  building.cpp  building.h  cmain.cpp  comctl32.lib  comdlg32.lib  crt.asm  crt.inc  ddraw.lib  dsound.lib  effect.h  eye.h  file.cpp  file.h  file_mfc.cpp  game.cpp  game_app.cpp  game_app.h  group.cpp  group.h  headers.inc  import.inc  inn.cpp  inn.h  inventory.cpp  inventory.h  item.h  (+78 more)
src/res/: a2server.rc
tool/: gap.py  replace_offsets.py
